--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-    "name": "proxy-server",
-    "version": "1.0.0",
-    "main": "server/index.js",
-    "scripts": {
-        "start": "node server/index.js"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "http-proxy-middleware": "^2.0.4"
-    }
+  "name": "proxy-server",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "vercel dev"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.4"
+  }
 }
